tests/fixtures/invalid/pow_float_none_bool.py
# Cannot call pow() with Float, None, Bool
x = pow(1.0, None, True)
